# ThreatX

./: .gitignore  .pythonpath  AI_ENGINE_SOLUTION.md  FONT_LOADING_FIX_SUMMARY.md  HOW_TO_USE_THREATX.md  README.md  TestWebClient.java  demo_threat_detection.py  docker-compose.yml  fixed_server.py  jsconfig.json  mock_ai_engine.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.bat  setup.sh  test_ai_connection.py  test_comprehensive_attacks.py  test_ddos_enhancement.py  test_font_loading.py  test_integration.py  test_server.py
ai-engine/: .env.example  Dockerfile  __init__.py  app.py  config.py  requirements.txt
ai-engine/src/: __init__.py  data_preprocessor.py  database_manager.py  dataset_manager.py  enhanced_threat_detector.py  threat_detector.py
ai-engine/tests/: test_data_preprocessor_types.py  test_threat_detection.py
ai_engine/: __init__.py
ai_engine/src/: __init__.py  enhanced_threat_detector.py
dashboard/: Dockerfile  pom.xml  run-dashboard.bat
dashboard/src/main/resources/: application.properties
dashboard/src/main/resources/static/css/: dashboard.css
dashboard/src/main/resources/static/js/: dashboard.js  types.d.ts
dashboard/src/main/resources/templates/: error.html  layout.html
dashboard/src/main/resources/templates/dashboard/: index.html  ips.html  (+4 more)
database/sql/: sample_data.sql  schema.sql
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: api.md  configuration.md  installation.md
examples/: threatx_integration_examples.py
models/: gradient_boosting.pkl  isolation_forest.pkl  scaler.pkl
(+11 files in other folders)
